fix misaligned text/non-<a> tags

--- a/ComponentsHTML/Addons/_Templates/Tree/Tree.scss
+++ b/ComponentsHTML/Addons/_Templates/Tree/Tree.scss
@@ -58,7 +58,7 @@ $cellhorzpadding: 2px;
             position:relative;
             line-height: $entryheight;
             height: $entryheight;
-            vertical-align:top;
+            vertical-align:middle;
             white-space:nowrap;
             .t_ddpos {
                 position:absolute;
